# userbot-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: build.yml
crates/kantex-rs/: Cargo.toml
crates/kantex-rs/src/: base.rs  document.rs  items.rs  lib.rs  macros.rs  sections.rs  styles.rs
crates/userbot-rs/: Cargo.toml  build.rs
crates/userbot-rs-macros/: Cargo.toml
crates/userbot-rs/src/: cmd.rs  main.rs
crates/userbot-rs/src/modules/: error.rs  info.rs  ping.rs  process.rs
crates/userbot-rs/src/modules/core/: dispatcher.rs  error_handler.rs  flags.rs
crates/userbot-rs/src/utils/: functions.rs  login.rs
src/: main.rs  tui.rs  versions.rs
src/config/: control.rs  loader.rs  mod.rs  schema.rs  utils.rs
src/modules/: error.rs  info.rs  mod.rs  ping.rs  process.rs
src/modules/core/: command.rs  dispatcher.rs  error_handler.rs  handler.rs  mod.rs  update_data.rs
src/utils/: functions.rs  login.rs  mod.rs  startup.rs
