[package]
name = "userbot_rs"
version = "0.1.0"
authors = ["sabby <sabby.6@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers.git" }
grammers-session = { git = "https://github.com/Lonami/grammers.git" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers.git" }
tokio = { version = "0.3", features = ["rt"] }
async-trait = "0.1.42"
userbot-rs-macros = {path = "..\\userbot-rs-macros"}
clap = { version = "3.0.0-beta.2" }
log = "0.4"
fern = { version = "0.5", features = ["colored"]}
